adding assets folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -60,7 +60,7 @@
     <div class="row">
       <!-- Fifth card -->
       <div class="fifth-card">
-        <img class="witcher-img" src="witcher.jpg" alt="Witcher" />
+        <img class="witcher-img" src="/assets/img/witcher.jpg" alt="Witcher" />
         <div class="fifth-card-inner"></div>
         <p class="witcher-content">
           The Witcher 3: Wild Hunt is an action role-playing game with a
@@ -103,6 +103,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script type="text/javascript" src="./assets/js/vanilla-tilt.js"></script>
   </body>
 </html>
