--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="row">
       <!-- Fifth card -->
       <div class="fifth-card">
-        <img class="witcher-img" src="/assets/img/witcher.jpg" alt="Witcher" />
+        <img class="witcher-img" src="./assets/img/witcher.jpg" alt="Witcher" />
         <div class="fifth-card-inner"></div>
         <p class="witcher-content">
           The Witcher 3: Wild Hunt is an action role-playing game with a
