adding new cards

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             <p class="second-card-subtitle">
               Happiness, in the context of mental or emotional states, is
               positive or pleasant emotions ranging from contentment to intense
-              joy. Other forms include life satisfaction, well-being, subjective
-              well-being,
+              joy.
             </p>
           </div>
         </div>
@@ -68,39 +67,73 @@
           slayer known as a Witcher. Geralt walks, runs, rolls and dodges, and
           (for the first time in the series) jumps, climbs and swims. He has a
           variety of weapons, including bombs, a crossbow and two swords (one
-          steel and one silver). The steel sword is used primarily to kill
-          humans while the silver sword is more effective against creatures and
-          monsters. Players can draw out, switch and sheathe their swords at
-          will. There are two modes of melee attack; light attacks are fast but
-          weak, and heavy attacks are slow but strong.
-          <strong><u>Read more...</u></strong>
+          steel and one silver). The steel sword is used primarily
+          <strong><u>...Read more</u></strong>
         </p>
       </div>
 
       <!-- Sixth card -->
       <div class="sixth-card">
-        <h3 class="sixth-card-title">[ Hover me ]</h3>
+        <h3 class="sixth-card-name">John Doe 43</h3>
+        <p class="sixth-card-speciality">QA Specialist</p>
+        <div class="sixth-card-top-flex">
+          <img class="sixth-card-profile-img" src="./assets/img/profile.png" />
+          <ul class="sixth-card-profile-info">
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Jira</li>
+            <li>Jenkins</li>
+            <li>Postman</li>
+            <li>Java</li>
+            <li>Selenium</li>
+          </ul>
+        </div>
+        <div class="sixth-card-introduction">
+          <h4>Previous experience:</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+            amet rerum recusandae suscipit, quaerat laudantium quo incidunt iure
+            perferendis tempora.
+          </p>
+        </div>
+        <div class="sixth-card-introduction">
+          <h4>Projects</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+            amet rerum recusandae suscipit, quaerat laudantium quo incidunt iure
+            perferendis tempora.
+          </p>
+        </div>
+        <div class="sixth-card-bottom-flex">
+          <div class="left-side">
+            <h4>Check my work at:</h4>
+            <img class="github-icon" src="./assets/img/github.jpg" />
+          </div>
+          <div class="right-side">
+            <h4>Find me on:</h4>
+            <div class="social-media-icons">
+              <img class="linked-in" src="./assets/img/in.jpg" />
+              <img class="email" src="./assets/img/mail.jpg" />
+              <img class="phone" src="./assets/img/phone.jpg" />
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="cards">
-        <img class="image" src="https://unsplash.it/270/250" alt="" />
-        <div>
-          <h3 class="title">Lorem ipsum dolor sit amet.</h3>
-          <p class="subtitle">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab,
-            deleniti sed quam earum veniam incidunt.
-          </p>
+      <!-- Seventh card -->
+      <div class="seventh-card">
+        <h2 class="s-letter"><span class="s-span">S</span></h2>
+        <h2 class="v-letter"><span class="v-span">V</span></h2>
+        <div class="clip-one"></div>
+        <div class="clip-two"></div>
+        <div class="seventh-card-inner">
+          <img src="./assets/img/sv-logo.png" />
         </div>
       </div>
-      <div class="cards">
-        <img class="image" src="https://unsplash.it/270/250" alt="" />
-        <div>
-          <h3 class="title">Lorem ipsum dolor sit amet.</h3>
-          <p class="subtitle">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab,
-            deleniti sed quam earum veniam incidunt.
-          </p>
-        </div>
+
+      <!-- Eight card -->
+      <div class="eight-card">
+        <h3 class="eight-card-title">[ Hover me ]</h3>
       </div>
     </div>
     <script type="text/javascript" src="./assets/js/vanilla-tilt.js"></script>
