changing eight card

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 
       <!-- Eight card -->
       <div class="eight-card">
-        <h3 class="eight-card-title">[ Hover me ]</h3>
+        <img src="./assets/img/luigi.jpg" />
+        <h2 class="eight-card-title">Luigi</h2>
       </div>
     </div>
     <script type="text/javascript" src="./assets/js/vanilla-tilt.js"></script>
